# zcserver-log4j-cpp-version

./: CMakeLists.txt  log.yml  readme.md  test.yml
class/: config.drawio  log.drawio
log/: root.txt  system.txt
src/: config.cpp  config.h  log.cpp  log.h  singleton.h  thread.cpp  thread.h  util.cpp  util.h
tests/: test.cpp  test_config.cpp  test_thread.cpp
